--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(BluetoothCtrlTest BluetoothCtrl.cpp)
 add_executable(BluetoothdTest BluetoothdTest.cpp)
 add_executable(USBTest USBTest.cpp)
+add_executable(BlueZTest BlueZTest.cpp)
