--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(BluetoothCtrlTest BluetoothCtrl.cpp)
-add_executable(BluetoothdTest BluetoothdTest.cpp)
-add_executable(USBTest USBTest.cpp)
-add_executable(BlueZTest BlueZTest.cpp)
+add_executable(BluetoothCtrlTest bluetooth_control.cpp)
+add_executable(BluetoothdTest bluetoothd_test.cpp)
+add_executable(USBTest usb_test.cpp)
+add_executable(BlueZTest blueZ_test.cpp)
