--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(lib)
+add_subdirectory(libraries)
 add_subdirectory(bluetoothd)
 add_subdirectory(bluetoothdctrl)
 add_subdirectory(test)
