--- a/src/libraries/libUSB/hid/CMakeLists.txt
+++ b/src/libraries/libUSB/hid/CMakeLists.txt
@@ -4,11 +4,13 @@ cmake_minimum_required(VERSION 3.3)
 list(
         APPEND HEADER_FILES
         hid.hpp
+        bt_8675.hpp
 )
 
 list(
         APPEND SOURCE_FILES
         hid.cpp
+        bt_8675.cpp
 )
 set(ALL_SOURCE_FILES ${HEADER_FILES} ${SOURCE_FILES})
 source_group(${PROJECT_NAME} FILES ${ALL_SOURCE_FILES})
