--- a/src/test/testApp/CMakeLists.txt
+++ b/src/test/testApp/CMakeLists.txt
@@ -3,4 +3,4 @@ add_executable(bluetoothd_test bluetoothd_test.cpp)
 add_executable(usb_test usb_test.cpp)
 add_executable(bluez_test bluez_test.cpp)
 add_executable(hid_test hid_test.cpp)
-target_link_libraries(hid_test  libhid libhidapi-libusb.a libhid )
+target_link_libraries(hid_test  libhid  )
